--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,14 @@ services:
     image: ${{ secrets.DOCKER_HUB_USERNAME }}/nestjs-app:latest
     ports:
       - "4001:4001"
-    env_file:
-      - .env 
+    environment:
+      - PORT=4001
+      - MONGO_URI=${{ secrets.MONGO_URI }}
+      - JWT_SECRET=${{ secrets.JWT_SECRET }}
+      - JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }}
+      - MAIL_HOST=${{ secrets.MAIL_HOST }}
+      - MAIL_PORT=${{ secrets.MAIL_PORT }}
+      - MAIL_USER=${{ secrets.MAIL_USER }}
+      - MAIL_PASS=${{ secrets.MAIL_PASS }}
+      - MAIL_FROM=${{ secrets.MAIL_FROM }}
     restart: unless-stopped
